--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -58,13 +58,12 @@ kotlin {
 
 dependencies {
     // Android support libraries
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:recyclerview-v7:27.0.2'
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support:design:27.0.2'
-    implementation 'com.android.support:percent:27.0.2'
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
     implementation 'com.android.support:cardview-v7:27.0.2'
-    implementation 'com.android.support:customtabs:27.0.2'
+    implementation 'com.android.support:percent:27.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     // Push notifications
     implementation 'com.google.firebase:firebase-messaging:11.8.0'
     // Youtube
@@ -80,8 +79,6 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-core:2.9.0'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.0'
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0"
-    // Event Bus
-    implementation 'org.greenrobot:eventbus:3.0.0'
     // Video chat
     implementation 'com.twilio:video-android:1.3.0'
     // Facebook SDK is used for Analytics, Share and to populate Sign up data
@@ -95,22 +92,14 @@ dependencies {
     implementation 'com.amazonaws:aws-android-sdk-s3:2.4.2'
     // Circle Progress UI element used for Profile icon
     implementation 'com.github.lzyzsd:circleprogress:1.2.1'
-    // Permission handling library used around the project for easier handling of permissions
-    implementation 'com.github.hotchemi:permissionsdispatcher:3.0.1'
-    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:3.0.1'
     // Custom fonts
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
     // A small library containing a wrapper/helper for the Shared Preferences of android
     implementation 'com.pixplicity.easyprefs:library:1.8.1@aar'
-    // Bind Android views and callbacks to fields and methods
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     // Checkout (Android In-App Billing Library) used for billing
     implementation 'org.solovyev.android:checkout:1.0.0'
     // Parses HTML store items or stats for sharing
     implementation 'org.jsoup:jsoup:1.11.2'
-    // Prohibits certain actions when offline
-    implementation 'com.keiferstone:nonet:2.0.0'
     // Reactive extensions
     implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
@@ -124,8 +113,6 @@ dependencies {
     // Image loader library
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     implementation "com.github.bumptech.glide:okhttp3-integration:4.6.1"
-    // Picker used for translation popup to select language
-    implementation 'com.shawnlin:number-picker:2.4.4'
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.anko:anko:0.10.4"
@@ -136,6 +123,24 @@ dependencies {
     implementation('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
         transitive = true
     }
+
+
+    // *** Not included in release, temporarily disabled
+
+
+    // *** Replaceable with Kotlin or RxJava, currently are a technical debt
+    // Bind Android views and callbacks to fields and methods
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    // Permission handling library used around the project for easier handling of permissions
+    implementation 'com.github.hotchemi:permissionsdispatcher:3.0.1'
+    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:3.0.1'
+    // Event Bus
+    implementation 'org.greenrobot:eventbus:3.0.0'
+    // Prohibits certain actions when offline
+    implementation 'com.keiferstone:nonet:2.0.0'
+    // Picker used for translation popup to select language
+    implementation 'com.shawnlin:number-picker:2.4.4'
 }
 
 apply plugin: 'com.google.gms.google-services'
